auth system finished, axios added, firsts api requests for auth

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,8 @@
 body {
     overflow-x: hidden;
 }
+
+.navbar-container {
+    padding: 10px;
+    background: linear-gradient(to right, #fee140, #fa709a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
